<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout style="@style/EmptyView"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/selectProfileButton"
        android:orientation="vertical"
        android:weightSum="20">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_weight="5"
            android:src="@mipmap/storage_sketch"/>

        <TextView
            style="@style/MsgText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add_storage_msg_text"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_weight="8"
            android:background="#EEEEEE"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:src="@mipmap/aws_s3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/amazonS3StorageText"/>

            <RadioButton
                android:id="@+id/s3StorageRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

        </RadioGroup>

        <LinearLayout
            android:id="@+id/awsDetails"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/accessKeyValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/accessKeyLabel"/>

            <EditText
                android:id="@+id/accessSecretValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/accessSecretLabel"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/selectProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/button_selector"
        android:text="@string/nextButtonLabel"
        android:enabled="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>

</RelativeLayout>